# hermes-autoresearch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: trial_contract.md
examples/: evaluator_contract_example.py  example_config.json  proposal_command_example.py  proposal_wrapper_example.py
src/hermes_autoresearch/: __init__.py  cli.py  config.py  orchestrator.py
tests/: test_harness.py  test_trial_contract.py
